--- a/BootStrap/Demo10.html
+++ b/BootStrap/Demo10.html
@@ -25,7 +25,7 @@
 
     <p data-toggle="collapse" data-target="#Python">What is Python ? </p>
     <div class="collapse" id="Python">
-        <h1> Python is OOPL programming lang : Scriptingh lang </h1>
+        <h1> Python is OOPL programming lang : Scripting lang </h1>
     </div>
 
 
