--- a/BootStrap/Demo12.html
+++ b/BootStrap/Demo12.html
@@ -37,6 +37,14 @@
 </body>
 </html>
 
+
+Nav BAR : https://getbootstrap.com/docs/4.3/components/navbar/
+MODEL : https://getbootstrap.com/docs/4.3/components/modal/
+SPINNER : https://getbootstrap.com/docs/4.3/components/spinners/
+POPUP OVER : https://getbootstrap.com/docs/4.3/components/popovers/
+TOOL TIP : https://getbootstrap.com/docs/4.3/components/tooltips/
+TOASTER : https://getbootstrap.com/docs/4.3/components/toasts/
+
             BootStracp 
 Gird 
 button
