--- a/JavaScript/Demo11.html
+++ b/JavaScript/Demo11.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div>
-        <h1>Window object : alert , confirm , Promp(BOM : browser object model ))</h1>
+        <h1>Window object : alert , confirm , Promp(BOM : browser object model )</h1>
        <input type="text" id="age">
         <input type="submit"  value="ENTER AGE" onclick="myage()">
     </div>
